# gufo_agent

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE.md  README.md  TODO.md  index.html  macros.py  mkdocs.yml  sitemap.xml
.devcontainer/: devcontainer.json
.environments/: README.md
.environments/mysql/: README.md  docker-compose.yml  gufo-agent-query.yml  gufo-agent.yml
.environments/mysql/initdb.d/: init.sql
.environments/postgres/: README.md  docker-compose.yml  gufo-agent-pg.yml  gufo-agent-pgb.yml  gufo-agent-query.yml  run-pg.sh  run.sh
.environments/postgres/initdb.d/: init.sh  init.sql
.environments/redis/: README.md  docker-compose.yml  gufo-agent.yml
.environments/scrape/: README.md  docker-compose.yml  gufo-agent-exporter.yml  gufo-agent-scrape-consul.yml  gufo-agent-scrape-dns.yml  gufo-agent-scrape-static.yml
.environments/scrape/consul/: agent1.json  agent2.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-docs.yml  publish.yml  tests.yml
.requirements/: docs.txt
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
agent/: Cargo.toml
agent/src/: agent.rs  config.rs  discovery.rs  lib.rs  mdb.rs  registry.rs  resolver.rs  schedule.rs  sender.rs
agent/src/relabel/: eval.rs  labeldrop.rs  labelmap.rs  labels.rs  mod.rs  ruleset.rs
codebase/: index.html
collectors/: index.html
collectors/_template/: Cargo.toml
collectors/_template/src/: lib.rs
collectors/block_io/: Cargo.toml  index.html
collectors/block_io/src/: lib.rs
collectors/cpu/: Cargo.toml  index.html
collectors/cpu/src/: lib.rs
collectors/dns/: Cargo.toml  index.html
collectors/dns/src/: lib.rs
collectors/exec/: Cargo.toml  index.html
collectors/exec/src/: lib.rs
collectors/fs/: Cargo.toml  index.html
collectors/fs/src/: lib.rs
collectors/http/: Cargo.toml  index.html
collectors/http/src/: lib.rs
collectors/memory/: Cargo.toml  index.html
collectors/memory/src/: lib.rs
collectors/modbus_rtu/: Cargo.toml  index.html
collectors/modbus_rtu/src/: lib.rs
collectors/modbus_tcp/: Cargo.toml  index.html
collectors/modbus_tcp/src/: lib.rs
collectors/mysql/: Cargo.toml  index.html
collectors/mysql/src/: lib.rs
collectors/mysql_query/: Cargo.toml  index.html
collectors/mysql_query/src/: lib.rs
collectors/network/: Cargo.toml  index.html
collectors/network/src/: lib.rs
collectors/pgbouncer/: Cargo.toml  index.html
collectors/pgbouncer/src/: lib.rs
collectors/postgres/: Cargo.toml  index.html
collectors/postgres/src/: lib.rs
collectors/postgres_query/: Cargo.toml  index.html
collectors/postgres_query/src/: lib.rs
collectors/procstat/: Cargo.toml  index.html
collectors/procstat/src/: lib.rs
collectors/redis/: Cargo.toml  index.html
collectors/redis/src/: lib.rs  parser.rs
collectors/scrape/: Cargo.toml  index.html
collectors/scrape/src/: lib.rs
collectors/scrape/src/sd/: consul.rs  dns.rs  mod.rs  static.rs
collectors/sockets/: Cargo.toml  index.html
collectors/sockets/src/: lib.rs
collectors/spool/: Cargo.toml  index.html
collectors/spool/src/: lib.rs
collectors/twamp_reflector/: Cargo.toml  index.html
collectors/twamp_reflector/src/: lib.rs
collectors/twamp_sender/: Cargo.toml  index.html
collectors/twamp_sender/src/: lib.rs
collectors/twamp_sender/src/pkt/: cbr.rs  g711.rs  g729.rs  imix.rs  mod.rs
collectors/uptime/: Cargo.toml  index.html
collectors/uptime/src/: lib.rs
common/: Cargo.toml
common/src/: collectable.rs  discovery.rs  error.rs  label.rs  lib.rs  metrics.rs  timing.rs
config_discovery/: index.html
configuration/: index.html
creating_new_collector/: index.html
devcommon/: index.html
devtools/: index.html
docs/: codebase.md  config_discovery.md  configuration.md  creating_new_collector.md  devcommon.md  devtools.md  index.md  installation.md  man.md  metrics.md  openmetrics.md  relabel.md  testing.md
docs/collectors/: block_io.md  cpu.md  dns.md  exec.md  fs.md  http.md  index.md  memory.md  modbus_rtu.md  modbus_tcp.md  mysql.md  mysql_query.md  network.md  pgbouncer.md  postgres.md  postgres_query.md  procstat.md  redis.md  scrape.md  sockets.md  spool.md  twamp_reflector.md  twamp_sender.md  uptime.md
environment/: index.html
examples/samples/: sample1.txt
examples/scripts/collector/: sample.sh
examples/scripts/config/: gufolabs.sh  twamp.sh
faq/: index.html
installation/: index.html
main/: Cargo.toml
main/src/: main.rs
man/: gufo-agent.1  index.html
metrics/: index.html
openmetrics/: index.html
proto/: README.md
proto/connection/: Cargo.toml
proto/connection/src/: lib.rs
proto/emodel/: Cargo.toml
proto/emodel/src/: lib.rs
proto/frame/: Cargo.toml
proto/frame/src/: lib.rs
proto/modbus/: Cargo.toml
proto/modbus/src/: lib.rs
proto/openmetrics/: Cargo.toml
proto/openmetrics/src/: lib.rs
proto/ps/: Cargo.toml
proto/ps/src/: lib.rs  linux.rs
proto/relabel/: Cargo.toml
proto/relabel/src/: config.rs  drop.rs  drop_if_equal.rs  dump.rs  eval.rs  keep.rs  labeldrop.rs  labelkeep.rs  labelmap.rs  labels.rs  lib.rs  replace.rs  ruleset.rs
proto/tos/: Cargo.toml
proto/tos/src/: lib.rs
proto/twamp/: Cargo.toml
proto/twamp/benches/: iai_bench.rs
proto/twamp/src/: accept_session.rs  lib.rs  ntp.rs  request_tw_session.rs  server_greeting.rs  server_start.rs  setup_response.rs  start_ack.rs  start_sessions.rs  stop_sessions.rs  test_request.rs  test_response.rs
proto/udp/: Cargo.toml
proto/udp/src/: lib.rs
relabel/: index.html
search/: search_index.json
testing/: index.html
tools/dev/: configure.py  list-deps.py  new-collector.py
tools/install/: agent-init.sh
