[workspace]

members = [
  "agent",
  "common",
  "main",
  "proto/connection",
  "proto/emodel",
  "proto/frame",
  "proto/openmetrics",
  "proto/ps",
  "proto/tos",
  "proto/twamp",
  "proto/udp",
  "collectors/block_io",
  "collectors/cpu",
  "collectors/dns",
  "collectors/exec",
  "collectors/fs",
  "collectors/http",
  "collectors/memory",
  "collectors/network",
  "collectors/procstat",
  "collectors/sockets",
  "collectors/spool",
  "collectors/twamp_reflector",
  "collectors/twamp_sender",
  "collectors/uptime",
]
