[workspace]

members = [
  "agent",
  "common",
  "main",
  "proto/connection",
  "proto/emodel",
  "proto/frame",
  "proto/modbus",
  "proto/openmetrics",
  "proto/ps",
  "proto/tos",
  "proto/twamp",
  "proto/udp",
  "collectors/block_io",
  "collectors/cpu",
  "collectors/dns",
  "collectors/exec",
  "collectors/fs",
  "collectors/http",
  "collectors/memory",
  "collectors/modbus_rtu",
  "collectors/modbus_tcp",
  "collectors/mysql",
  "collectors/mysql_query",
  "collectors/network",
  "collectors/pgbouncer",
  "collectors/postgres",
  "collectors/postgres_query",
  "collectors/procstat",
  "collectors/redis",
  "collectors/scrape",
  "collectors/sockets",
  "collectors/spool",
  "collectors/twamp_reflector",
  "collectors/twamp_sender",
  "collectors/uptime",
]
