[package]
authors = ["Gufo Labs"]
description = "Gufo Agent"
edition = "2021"
name = "agent"
version = "0.1.0"

[dependencies]
block_io = {path = "../collectors/block_io"}
bytes = "1.4"
common = {path = "../common"}
cpu = {path = "../collectors/cpu"}
dns = {path = "../collectors/dns"}
exec = {path = "../collectors/exec"}
fs = {path = "../collectors/fs"}
gethostname = "0.4"
http = {path = "../collectors/http"}
log = "0.4"
memory = {path = "../collectors/memory"}
network = {path = "../collectors/network"}
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
sockets = {path = "../collectors/sockets"}
spool = {path = "../collectors/spool"}
tokio = {version = "1.27", features = ["full"]}
twamp_reflector = {path = "../collectors/twamp_reflector"}
twamp_sender = {path = "../collectors/twamp_sender"}
uptime = {path = "../collectors/uptime"}
warp = "0.3"
