[package]
authors = ["Gufo Labs"]
description = "Gufo Agent"
edition = "2021"
name = "agent"
version = "0.1.0"

[dependencies]
block_io = {path = "../collectors/block_io"}
bytes = "1.4"
common = {path = "../common"}
cpu = {path = "../collectors/cpu"}
dns = {path = "../collectors/dns"}
exec = {path = "../collectors/exec"}
fs = {path = "../collectors/fs"}
gethostname = "0.4"
http = {path = "../collectors/http"}
log = "0.4"
memory = {path = "../collectors/memory"}
modbus_rtu = {path = "../collectors/modbus_rtu"}
modbus_tcp = {path = "../collectors/modbus_tcp"}
mysql = {path = "../collectors/mysql"}
mysql_query = {path = "../collectors/mysql_query"}
network = {path = "../collectors/network"}
pgbouncer = {path = "../collectors/pgbouncer"}
postgres = {path = "../collectors/postgres"}
postgres_query = {path = "../collectors/postgres_query"}
procstat = {path = "../collectors/procstat"}
rand = "0.8"
redis = {path = "../collectors/redis"}
relabel = {path = "../proto/relabel"}
scrape = {path = "../collectors/scrape"}
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
sockets = {path = "../collectors/sockets"}
spool = {path = "../collectors/spool"}
tokio = {version = "1.29", features = ["full"]}
twamp_reflector = {path = "../collectors/twamp_reflector"}
twamp_sender = {path = "../collectors/twamp_sender"}
uptime = {path = "../collectors/uptime"}
warp = {version = "0.3", features = ["tls"]}
