[package]
edition = "2021"
name = "modbus_tcp"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
common = {path = "../../common"}
log = "0.4"
modbus = {path = "../../proto/modbus"}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.27"}
tokio-modbus = {version = "0.8", default-features = false, features = ["tcp"]}
