[package]
edition = "2021"
name = "mysql"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
common = {path = "../../common"}
futures = "0.3"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
sqlx = {git = "https://github.com/launchbadge/sqlx.git", tag = "v0.7.0-alpha.3", features = ["runtime-tokio", "tls-rustls", "mysql"]}
