[package]
edition = "2021"
name = "postgres"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
common = {path = "../../common"}
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
#sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres"]}
futures = "0.3"
sqlx = {version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres"]}
