[package]
edition = "2021"
name = "postgres_query"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
bigdecimal = "0.3"
common = {path = "../../common"}
futures = "0.3"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "bigdecimal"]}
