[package]
edition = "2021"
name = "scrape"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
common = {path = "../../common"}
log = "0.4"
openmetrics = {path = "../../proto/openmetrics"}
relabel = {path = "../../proto/relabel"}
reqwest = {version = "0.11", features = [
  "rustls-tls",
  "gzip",
  "deflate",
  "trust-dns",
], default-features = false}
serde = {version = "1.0", features = ["derive"]}
