[package]
edition = "2021"
name = "twamp_sender"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
bytes = "1.4"
chrono = "0.4"
common = {path = "../../common"}
connection = {path = "../../proto/connection"}
emodel = {path = "../../proto/emodel"}
enum_dispatch = "0.3"
frame = {path = "../../proto/frame"}
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
tokio = {version = "1.29"}
tos = {path = "../../proto/tos"}
twamp = {path = "../../proto/twamp"}
